<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/horizontal_resolution"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical|left"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="8"
                android:id="@+id/teHorizontalResolution"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vertical_resolution"
                android:id="@+id/textView2"
                android:layout_gravity="center_vertical|left"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="8"
                android:id="@+id/teVerticalResolution"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/diagonal_size"
                android:id="@+id/textView3"
                android:layout_gravity="center_vertical|left"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"/>

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="8"
                android:id="@+id/teDiagonalSize"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"/>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/pixel_density"
                android:id="@+id/textView4"
                android:layout_gravity="bottom|left"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="19dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unknown"
                android:id="@+id/tvPixelDensity"
                android:layout_gravity="center"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/horizontal_size"
                android:id="@+id/textView5"
                android:layout_gravity="center_vertical|bottom"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unknown"
                android:id="@+id/tvHorizontalSize"
                android:layout_gravity="bottom"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/vertical_size"
                android:id="@+id/textView7"
                android:layout_gravity="center_vertical|bottom"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/unknown"
                android:id="@+id/tvVerticalSize"
                android:layout_gravity="bottom"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>